--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,12 +18,50 @@
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.StitchCounterV3">
+        </activity>
+        
+        <!-- Activity aliases for theme-specific launcher icons -->
+        <activity-alias
+            android:name=".SeaCottageLauncherAlias"
+            android:targetActivity=".MainActivity"
+            android:enabled="true"
+            android:icon="@mipmap/ic_launcher_sea_cottage"
+            android:roundIcon="@mipmap/ic_launcher_sea_cottage_round"
+            android:label="@string/app_name"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
+        </activity-alias>
+        
+        <activity-alias
+            android:name=".RetroSummerLauncherAlias"
+            android:targetActivity=".MainActivity"
+            android:enabled="false"
+            android:icon="@mipmap/ic_launcher_retro_summer"
+            android:roundIcon="@mipmap/ic_launcher_retro_summer_round"
+            android:label="@string/app_name"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity-alias>
+        
+        <activity-alias
+            android:name=".PurpleLauncherAlias"
+            android:targetActivity=".MainActivity"
+            android:enabled="false"
+            android:icon="@mipmap/ic_launcher_purple"
+            android:roundIcon="@mipmap/ic_launcher_purple_round"
+            android:label="@string/app_name"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity-alias>
     </application>
 
 </manifest>
